Darken yellow selection in settings
 * also set the setting stylings the same across all of settings

--- a/src/app/settings/user-agent/user-agent.component.scss
+++ b/src/app/settings/user-agent/user-agent.component.scss
@@ -2,8 +2,8 @@
 @import '~bourbon-neat/app/assets/stylesheets/_neat';
 @import '../../../scss/variables';
 
-.option {
-  height: 95px;
+.switch-row {
+  height: 40px;
   color: #fff;
   cursor: pointer;
   background-color: $primary-bg-light;
@@ -34,21 +34,11 @@
     height: 100%;
     text-align: left;
     vertical-align: top;
-  }
-  .label {
-    font-size: 18px;
-    line-height: 1.5;
-    padding-top: 10px;
-  }
-  .desc {
-    font-size: 14px;
-    line-height: 1.5;
-    opacity: 0.5;
-  }
-  .info {
-    font-size: 14px;
-    line-height: 1.5;
-    color: #a3b5b6;
-    span { font-size: 16px; color: #fefefe; }
+
+    .label {
+      font-size: 16px;
+      line-height: 1;
+      padding: 10px 0 0;
+    }
   }
 }
