--- a/src/app/settings/user-agent/user-agent.component.html
+++ b/src/app/settings/user-agent/user-agent.component.html
@@ -4,23 +4,47 @@
   </div>
 
   <!-- Private User Agent -->
-  <div (click)="setUserAgent('PRIVATE')" [ngClass]="{'checked': selectedUserAgentType === 'PRIVATE'}" class="switch-row highlighted selectable bottom-separator">
-    <div class="label">Private User Agent</div>
+  <div (click)="setUserAgent('PRIVATE')" class="switch-row bottom-separator">
+    <div class="selected">
+      <div class="circle" [ngClass]="{'checked': selectedUserAgentType === 'PRIVATE'}"></div>
+    </div>
+
+    <div class="text">
+      <div class="label">Private User Agent</div>
+    </div>
   </div>
 
   <!-- Default User Agent -->
-  <div (click)="setUserAgent('DEFAULT')" [ngClass]="{'checked': selectedUserAgentType === 'DEFAULT'}" class="switch-row highlighted selectable bottom-separator">
-    <div class="label">Default User Agent</div>
+  <div (click)="setUserAgent('DEFAULT')" class="switch-row bottom-separator">
+    <div class="selected">
+      <div class="circle" [ngClass]="{'checked': selectedUserAgentType === 'DEFAULT'}"></div>
+    </div>
+
+    <div class="text">
+      <div class="label">Default User Agent</div>
+    </div>
   </div>
 
   <!-- iOS User Agent -->
-  <div (click)="setUserAgent('IOS')" [ngClass]="{'checked': selectedUserAgentType === 'IOS'}" class="switch-row highlighted selectable bottom-separator">
-    <div class="label">iOS User Agent</div>
+  <div (click)="setUserAgent('IOS')" class="switch-row bottom-separator">
+    <div class="selected">
+      <div class="circle" [ngClass]="{'checked': selectedUserAgentType === 'IOS'}"></div>
+    </div>
+
+    <div class="text">
+      <div class="label">iOS User Agent</div>
+    </div>
   </div>
 
   <!-- Android User Agent -->
-  <div (click)="setUserAgent('ANDROID')" [ngClass]="{'checked': selectedUserAgentType === 'ANDROID'}" class="switch-row highlighted selectable bottom-separator">
-    <div class="label">Android User Agent</div>
+  <div (click)="setUserAgent('ANDROID')" class="switch-row bottom-separator">
+    <div class="selected">
+      <div class="circle" [ngClass]="{'checked': selectedUserAgentType === 'ANDROID'}"></div>
+    </div>
+
+    <div class="text">
+      <div class="label">Android User Agent</div>
+    </div>
   </div>
 
 </div>
