--- a/src/app/settings/user-agent/user-agent.component.scss
+++ b/src/app/settings/user-agent/user-agent.component.scss
@@ -2,7 +2,7 @@
 @import '~bourbon-neat/app/assets/stylesheets/_neat';
 @import '../../../scss/variables';
 
-.switch-row {
+.option {
   height: 40px;
   color: #fff;
   cursor: pointer;
