--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -196,6 +196,7 @@
           margin-top: 65px;
           width: 44px;
           height: 28px;
+          &.cypherplay { width: auto; }
           &.flag { margin-top: 47px; }
           &.favicon {
             margin-top: 43px;
