Fix bug with broken image favicon on location page

--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -26,7 +26,7 @@
   .right {
     float: left;
     width: 295px;
-    padding: 10px 0 0 10px;
+    padding: 10px 0 10px 10px;
 
     .site-name {
       color: #fff;
