Rename Crypto Profile to Proxy Mode

--- a/src/app/settings/proxy-mode/proxy-mode.component.html
+++ b/src/app/settings/proxy-mode/proxy-mode.component.html
@@ -1,6 +1,6 @@
 <div id="sub-menu">
   <div id="header" (click)="goToView('app-settings')" class="page-header bottom-separator">
-    <span class="back-icon">&#x3008;</span>Crypto Profile
+    <span class="back-icon">&#x3008;</span>Proxy Mode
   </div>
 
   <!-- Smart Routing -->
