--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -4,8 +4,8 @@
   </div>
 
   <!-- Crypto Profile -->
-  <div (click)="goToView('app-crypto-profile')" class="switch-row highlighted clickable bottom-separator">
-    <div class="label half">Crypto Profile</div>
+  <div (click)="goToView('app-proxy-mode')" class="switch-row highlighted clickable bottom-separator">
+    <div class="label half">Proxy Mode</div>
     <div class="switch half">
       <span class="forward-icon">&#x3009;</span>
     </div>
