--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -66,7 +66,9 @@
 
       <div class="input-wrapper">
         <input #registerPasswordInput type="password" [(ngModel)]="user.password" placeholder="Password" (keyup.enter)="register()" [disabled]="currentView !== 'register'">
-        <button (click)="register()" [disabled]="currentView !== 'register'">&#8250;</button>
+        <button class="signup" (click)="register()" [disabled]="currentView !== 'register'">
+          SIGN UP <span>&#8250;</span>
+        </button>
       </div>
 
       <div class="lower-text">
