--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -80,15 +80,15 @@
   .lower-text {
     text-align: center;
     color: #fff;
-    font-size: 16px;
-    margin: 10px 0 0;
-    padding: 20px;
-    a { color: #5fbbc4; cursor: pointer; font-size: 16px; }
+    font-size: 12px;
+    padding: 20px 10px 10px;
+    a { color: #5fbbc4; cursor: pointer; }
   }
 
   .input-wrapper {
     position: relative;
     padding: 0 20px;
+    overflow: auto;
 
     input {
       height: 50px;
@@ -100,12 +100,23 @@
       color: #fff;
       font-size: 16px;
     }
+
+    button.signup {
+      float: right;
+      position: static;
+      font-size: 16px;
+      line-height: 16px;
+      margin: 10px 0 0;
+      span {
+        font-size: 20px;
+      }
+    }
   }
 
   .register-back {
     color: #5fbbc4;
     font-size: 16px;
-    margin: 25px 20px 0;
+    margin: 15px 20px 0;
     cursor: pointer;
   }
 
