--- a/src/app/tutorial/tutorial.component.scss
+++ b/src/app/tutorial/tutorial.component.scss
@@ -64,10 +64,20 @@
         z-index: 100;
         color: #fff;
         text-decoration: underline;
-        margin-top: 24px;
+        margin: 10px 0 0;
+      }
+    }
+
+    .skip {
+      margin: 10px 0 0;
+      a {
+        cursor: pointer;
+        color: hsla(0,0%,100%,.6);
+        &:hover { color: #fff; }
       }
     }
   }
+
   .back-btn {
     position: absolute;
     bottom: 16px;
@@ -78,6 +88,7 @@
     color: #fff;
     .text { text-decoration: underline; }
   }
+
   .dots {
     position: absolute;
     bottom: 16px;
