--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -96,158 +96,355 @@
   }
 }
 
-/* Disconnected Screen */
-#off-screen img { margin-top: 48px; width: 100%; }
-
 /* Connected Screen */
 #on-screen {
-  .flags-wrap {
-    @include pad(22px 12px 56px);
-    overflow: auto;
-    z-index: 20;
+  .connect-button {
+    position: absolute;
+    left: 50%;
+    top: 200px;
+    transform: translate(-50%,-50%);
+    width: 152px;
+    cursor: pointer;
 
-    .banner {
+    // .fadeInTransition(0.5s, ease-in, 0.3s);
+    // &.hidden { .fadeOutTransition(0.5s, ease-out); }
+
+    .bg {
+      opacity: 0.25;
+      transition: opacity 1s ease-out;
+    }
+
+    .pipe {
       position: absolute;
-      width: 230px;
-      top: 202px;
-      left: 60px;
-      z-index: 1;
-      img { width: 100%; }
+      left: 50%;
+      top: 38px;
+      transform: translate(-50%,-50%);
+      width: 500px;
+      height: 4px;
+      transition: transform 1s ease;
+      background: linear-gradient(to right, cyan, rgba(0, 255, 255, 0.25) 74px, cyan 182px, transparent 182px, transparent 318px, cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan);
     }
 
-    .title {
-      @include span-columns(12);
-      font-size: 18px;
-      text-align: center;
-      margin-top: 4px;
+    .dot {
+      position: absolute;
+      top: 36px;
+      left: -194px;
+      width: 40px;
+      height: 4px;
+      background: linear-gradient(to right, transparent, white, white, transparent);
+      //background: radial-gradient(ellipse closest-side, white, transparent);
+      animation: connect-pipe-dot 1.2s linear;
+      animation-iteration-count: 1;
+      opacity: 0;
+      transition: opacity 0.5s;
     }
 
-    .location {
-      @include span-columns(4);
-      text-align: center;
-      position: relative;
-      z-index: 2;
-      &.last { @include omega; cursor: pointer; }
+    .row1, .row2 {
+      font-size: 10px;
+      font-weight: 500;
+      letter-spacing: 1px;
+      line-height: 12px;
+      transform: translate3d(0,0,0);
+      width: auto;
+      position: absolute;
+      white-space: pre;
+      margin-left: -100px;
+      .is-focused & {
+        animation-play-state: running;
+      }
+      visibility: hidden;
+      opacity: 0;
+      transition: opacity 0.5s, visibility 0.5s step-end;
+    }
+    .row1 {
+      animation: 20s linear infinite paused marquee;
+      top: 25px;
+      color: #7ffffb;
+    }
+    .row2 {
+      animation: 20s linear reverse infinite paused marquee;
+      top: 37px;
+      color: #5fbfbb;
+    }
 
-      .overlay {
-        display: none;
+    .frame {
+      position: absolute;
+      border-radius: 100px;
+      border: 8px solid cyan;
+      border-width: 0px 8px;
+      width: 152px;
+      height: 76px;
+      padding: 8px;
+      transition: padding 1s ease, border 0.5s ease-in, width 1s, margin 1s, box-shadow 1s;
+    }
+
+    .slider {
+      position: absolute;
+      top: 8px;
+      left: (8px + 8px);
+      width: 120px;
+      height: 60px;
+      padding: 5px;
+      border-radius: 100px;
+      background: rgba(0,0,0,0.5);
+      border: 3px solid rgba(0,255,255,0.2);
+      transition: background 1s, box-shadow 1s, border 1s;
+
+      &::before, &::after {
+        // .semanticIcon('');
         position: absolute;
+        width: 40px;
+        height: 100%;
+        top: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 32px;
+        transition: opacity 0.3s;
+        color: rgba(80,255,255,0.2);
+        opacity: 0;
+      }
+      &::before {
+        // no longer used, instead an arrow is embedded in the knob
+        display: none;
+        left: 12px;
+        content: '\f060';
+      }
+      &::after {
+        right: 12px;
+        content: '\f061';
+        //transition-delay: 0.2s;
+      }
+    }
+    .knob {
+      position: absolute;
+      left: (8px + 8px + 5px);
+      top: (8px + 5px);
+      width: 50px;
+      height: 50px;
+      border-radius: 100px;
+      background-color: #088;
+      background-image: linear-gradient(135deg, rgba(255,255,255,0.4) 25%, transparent 75%);
+      border: 4px solid #177;
+
+      transition: transform 0.5s ease, border 0.5s ease-in-out, background-color 0.5s ease;
+
+      &::before {
+        opacity: 0;
+        // .semanticIcon('\f060');
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 32px;
+        color: rgba(0,128,128,0.25);
+        transition: opacity 0.3s;
+        opacity: 0;
+      }
+    }
+
+    &.on {
+      .bg {
+        opacity: 1 !important;
+        transition: opacity 1s ease-in-out !important;
+      }
+      .frame {
+        padding: 0px;
+        border: 9px solid white;
+        opacity: 1;
+        margin: 0 8px;
+        width: (120px + 8px * 2);
+        box-shadow: 0 0 6px -1px white;
+        transition: border-color 0.5s 0.2s ease-out, border-width 0.35s 0.1s cubic-bezier(0, 0.2, 0.5, 0.4), width 0.4s 0.1s ease-in-out, margin 0.4s 0.1s ease-in-out, box-shadow 1s;
+      }
+      .slider {
+        background: rgba(0,128,128,0.5);
+        box-shadow: 0 0 80px rgba(0,255,255,0.5);
+        border: 3px solid rgba(128,255,255,0.5);
+        transition-duration: 1s !important;
+
+        &::before {
+          //opacity: 1;
+          //transition-delay: 0.2s;
+        }
+        &::after {
+          //opacity: 0;
+          //transition-delay: 0s;
+        }
+      }
+      .knob {
+        transform: translateX((120px - 2 * 5px - 50px));
+        //box-shadow: inset 0 0 30px 5px white;
         background-color: white;
-        border-radius: 5px;
-        color: #000;
-        padding: 5px 10px;
-        font-size: 12px;
-        text-align: left;
+        border-color: #cee;
 
-        div {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-
-        &:after {
-          content: ' ';
-          width: 0;
-          height: 0;
-          border-left: 10px solid transparent;
-          border-right: 10px solid transparent;
-          border-top: 10px solid #fff;
-          position: absolute;
-          bottom: -10px;
-          z-index: 2;
+        &::before {
+          //opacity: 1;
+          //transition-delay: 0.2s;
         }
       }
-
-      .actual-overlay {
-        top: 15px;
-        left: 30px;
-        width: 100px;
-        &:after { left: 12px; }
+    }
+    &.on.connecting {
+      .dot {
+        & { animation-iteration-count: infinite; }
+        opacity: 1;
+        transition: opacity 1s 0.5s;
       }
-
-      .route-overlay {
-        top: 15px;
-        right: 30px;
-        width: 130px;
-        &:after { right: 14px; }
+    }
+    &.on.connected {
+      .pipe {
+        transform: translate(-50%,-50%) scale(0.9, 10);
+        transition-delay: 0.5s;
+        animation: connect-pipe-connected 0.8s linear;
       }
-
-      .flag-container {
-        margin-top: 20px;
-        width: 105px;
-        height: 167px;
-
-        &.helmet {
-          background-image: url('/assets/index-helmet.png');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: 105px;
-        }
-        &.user {
-          background-image: url('/assets/index-location.png');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: contain;
-          &:hover + .actual-overlay { display: block; }
-        }
-        &.site {
-          background-image: url('/assets/index-connected.png');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-size: contain;
-          &:hover + .route-overlay { display: block; }
-        }
-        &.small {
-          width: 80px;
-          height: 100px;
-          margin: 85px auto 0;
-        }
-
-        img {
-          margin-top: 65px;
-          width: 44px;
-          height: 28px;
-          &.cypherplay { width: auto; }
-          &.flag { margin-top: 47px; }
-          &.favicon {
-            margin-top: 43px;
-            width: 35px;
-            height: 35px;
-          }
-        }
+      .row1, .row2 {
+        visibility: visible;
+        opacity: 0.5;
+        transition: opacity 2s 0.5s, visibility 2s 0.5s step-start;
       }
-
-      .no-wrap {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+    }
+    &.off.disconnecting {
+      .bg {
+        animation: connect-bg-disconnecting 1s linear infinite paused;
+        .is-focused & { animation-play-state: running; }
       }
+      .dot {
+        opacity: 0 !important;
+        visibility: hidden;
+        transition: opacity 0.5s, visibility 0.5 step-end;
+      }
+      .pipe {
+        transform: translate(-50%,-50%) scale(1, 4);
+        animation: connect-pipe-disconnecting 2s linear both;
+      }
+    }
 
-      .subtitle {
-        margin-top: 10px;
-        text-align: center;
-        font-weight: 200;
-        max-width: 100%;
-
-        &.bold { font-weight: 400; }
-        a {
-          @include display(block);
-          line-height: 1.35;
-          font-weight: 200;
-          div {
-            -webkit-text-stroke: 1px rgba(169, 169, 169, 0.6);
-            color: rgba(169, 169, 169, 0.6);
-            margin-top: -4px;
-            font-size: 5px;
-          }
-          &:hover div {
-            -webkit-text-stroke: 1px rgba(169, 169, 169, 0.4);
-            color: rgba(169, 169, 169, 0.4);
-          }
-        }
+    &:hover {
+      .bg {
+        opacity: 0.5;
+        transition: opacity 0.3s;
+      }
+      .slider {
+        border-color: rgba(0,255,255,0.5);
+        transition-duration: 0.3s;
+      }
+    }
+    &:hover, &:focus {
+      &.on .knob::before {
+        opacity: 1;
+        transition-delay: 0s;
+      }
+      &.off.disconnected .slider::after {
+        opacity: 1;
+        transition-delay: 0s;
       }
     }
   }
+
+  @keyframes connect-pipe-dot {
+    0% { transform: translateX(30px); animation-timing-function: cubic-bezier(0.5,0,1,0.5); }
+    40% { transform: translateX(180px); }
+    43% { transform: translateX(185px) scale(0.2, 1); }
+    46% { transform: translateX(210px) scale(0.2, 16); }
+    50% { transform: translateX(250px) scale(0.2, 16); }
+    54% { transform: translateX(290px) scale(0.2, 16); }
+    57% { transform: translateX(315px) scale(0.2, 1); }
+    60% { transform: translateX(330px); animation-timing-function: cubic-bezier(0,0.5,0.5,1); }
+    100% { transform: translateX(470px); }
+  }
+
+  @keyframes connect-pipe-connected {
+    0% {
+      background: linear-gradient(to right, cyan,
+        rgba(0, 255, 255, 0.25) 74px, cyan 182px,
+        transparent 182px, transparent 318px,
+        cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan
+      );
+    }
+    10% {
+      background: linear-gradient(to right, white,
+        rgba(255, 255, 255, 0.25) 74px, white 182px,
+        transparent 182px, transparent 318px,
+        white 318px, rgba(255, 255, 255, 0.25) 426px, white
+      );
+    }
+    20% {
+      background: linear-gradient(to right, cyan,
+        rgba(0, 255, 255, 0.25) 74px, cyan 182px,
+        transparent 182px, transparent 318px,
+        cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan
+      );
+    }
+    30% {
+      background: linear-gradient(to right, white,
+        rgba(255, 255, 255, 0.25) 74px, white 182px,
+        transparent 182px, transparent 318px,
+        white 318px, rgba(255, 255, 255, 0.25) 426px, white
+      );
+    }
+    40% {
+      background: linear-gradient(to right, cyan,
+        rgba(0, 255, 255, 0.25) 74px, cyan 182px,
+        transparent 182px, transparent 318px,
+        cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan
+      );
+    }
+    50% {
+      background: linear-gradient(to right, white,
+        rgba(255, 255, 255, 0.25) 74px, white 182px,
+        transparent 182px, transparent 318px,
+        white 318px, rgba(255, 255, 255, 0.25) 426px, white
+      );
+    }
+    60% {
+      background: linear-gradient(to right, cyan,
+        rgba(0, 255, 255, 0.25) 74px, cyan 182px,
+        transparent 182px, transparent 318px,
+        cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan
+      );
+    }
+    70% {
+      background: linear-gradient(to right, white,
+        rgba(255, 255, 255, 0.25) 74px, white 182px,
+        transparent 182px, transparent 318px,
+        white 318px, rgba(255, 255, 255, 0.25) 426px, white
+      );
+    }
+    80% {
+      background: linear-gradient(to right, cyan,
+        rgba(0, 255, 255, 0.25) 74px, cyan 182px,
+        transparent 182px, transparent 318px,
+        cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan
+      );
+    }
+    100% {
+      background: linear-gradient(to right, cyan,
+        rgba(0, 255, 255, 0.25) 74px, cyan 182px,
+        transparent 182px, transparent 318px,
+        cyan 318px, rgba(0, 255, 255, 0.25) 426px, cyan
+      );
+    }
+  }
+
+  @keyframes connect-pipe-disconnecting {
+    0% { transform: translate(-50%,-50%) scale(0.9, 10); }
+    10% { transform: translate(-50%,-50%) scale(1, 8); }
+    100% { transform: translate(-50%,-50%); }
+  }
+
+  @keyframes connect-bg-disconnecting {
+    0% { opacity: 1; }
+    50% { opacity: 0.5; }
+    100% { opacity: 1; }
+  }
+
+
+
+
 
   .scrolling-binary {
     position: absolute;
@@ -256,103 +453,6 @@
     right: 0;
     margin: 0 92px;
     z-index: 1;
-  }
-
-  .cypher-buttons {
-    width: 100%;
-    border-top: 15px solid #010011;
-    overflow: hidden;
-    color: #8dfffc;
-    background-color: $primary-bg;
-
-    .left {
-      float: left;
-      width: 25%;
-    }
-
-    .right {
-      float: left;
-      width: 75%;
-
-      .row {
-        overflow: auto;
-        border-bottom: 1px solid #010011;
-        &:last-child { border-bottom: 0; }
-
-        .third {
-          width: 33.33%;
-          float: left;
-          border-right: 1px solid #010011;
-          &:last-child { border-right: 0; }
-        }
-      }
-    }
-
-    .button {
-      width: 100%;
-      height: 90px;
-      float: left;
-      cursor: pointer;
-      &:hover { background-color: $primary-bg-light; }
-      &.disabled {
-        cursor: default;
-        background-color: $primary-bg-dark;
-      }
-
-      &.checked {
-        background-color: #010011;
-        .icon { border: 1px solid #ffe49a; }
-        .title { color: #ffe49a; }
-      }
-
-      &.tall {
-        width: 100%;
-        height: 180px;
-        border-right: 1px solid #010011;
-
-        .icon {
-          width: 64px;
-          height: 64px;
-          margin-top: 50px;
-          padding: 10px;
-        }
-      }
-
-      .icon {
-        width: 46px;
-        height: 46px;
-        margin: 10px auto 5px;
-        padding: 5px;
-        border-radius: 3px;
-        border: 1px solid #19474c;
-        background-color: #010011;
-        text-align: center;
-        img { height: 100%; }
-
-        .star {
-          color: #ffe49a;
-          font-size: 24px;
-        }
-
-        &.rocket {
-          padding: 10px 5px;
-          img { width: 100%; }
-        }
-
-        &.more {
-          padding: 16px 10px 20px;
-          img { width: 100%; }
-        }
-      }
-
-      .title {
-        text-align: center;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        padding: 0 5px;
-      }
-    }
   }
 }
 
