--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -98,6 +98,14 @@
 
 /* Connected Screen */
 #on-screen {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-flow: column;
+
   .connect-button {
     position: absolute;
     left: 50%;
@@ -106,8 +114,16 @@
     width: 152px;
     cursor: pointer;
 
-    // .fadeInTransition(0.5s, ease-in, 0.3s);
-    // &.hidden { .fadeOutTransition(0.5s, ease-out); }
+    transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    &.hiden {
+      transition: opacity 0.5s ease-out 0s, visibility 0.5s step-end 0s, pointer-events 0.5s step-start 0s;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
 
     .bg {
       opacity: 0.25;
@@ -342,6 +358,37 @@
         opacity: 1;
         transition-delay: 0s;
       }
+    }
+  }
+
+  .connect-status {
+    position: absolute;
+    top: 300px;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+
+    &.hidden {
+      transition: opacity 0.5s ease-out 0s, visibility 0.5s step-end 0s, pointer-events 0.5s step-start 0s;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+
+    > span {
+      &:first-child {
+        font-size: 10px;
+        color: rgba(0,255,255,0.5);
+        overflow-x: visible;
+      }
+      font-size: 16px;
+      text-transform: uppercase;
     }
   }
 
