Added location selector on main page, style only

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -62,6 +62,13 @@
       <span>Disconnected</span>
     </div>
 
+    <div class="location-selector">
+      <div class="location">
+        <img class="flag" src="/assets/flags/24/us.png">
+        <span>New York, New York</span>
+      </div>
+    </div>
+
     <!--
     <div class="scrolling-binary">
       <div class="right">
