--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -98,13 +98,11 @@
 
 /* Connected Screen */
 #on-screen {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  background: linear-gradient(to bottom, #0f2125, #044);
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 
   .connect-button {
     position: absolute;
@@ -367,8 +365,6 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
-    left: 50%;
-    transform: translateX(-50%);
     transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
     opacity: 1;
     visibility: visible;
@@ -391,6 +387,70 @@
       text-transform: uppercase;
     }
   }
+
+  .location-selector {
+    position: absolute;
+    top: 430px;
+    display: flex;
+    align-items: center;
+    border-radius: 100px;
+    background: rgba(80,255,255,0.15);
+    padding: 0px 18px;
+    border: 4px solid rgba(0,0,0,0.25);
+    height: 48px;
+    z-index: 1;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.4s, color 0.4s;
+    color: rgba(255,255,255,0.75);
+    transition: opacity 0.5s ease-in 0.3s, visibility 0.5s step-start 0.3s, pointer-events 0.5s step-end 0.3s;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+
+    &.hidden {
+      transition: opacity 0.5s ease-out 0s, visibility 0.5s step-end 0s, pointer-events 0.5s step-start 0s;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+    }
+
+    &::after {
+      // .semanticIcon('\f021');
+      content: '>';
+      margin-left: 10px;
+      border-radius: 100px;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      align-self: stretch;
+      margin-right: -18px;
+      width: 40px;
+      height: 40px;
+      background: linear-gradient(to right, rgba(0,0,0,0.25), transparent 50%);
+      font-size: 16px;
+      color: rgba(200,255,255,0.75);
+      transition: color 0.2s;
+    }
+
+    &:hover {
+      background: rgba(80,255,255,0.25);
+      color: white;
+      transition: background 0.16s, color 0.16s;
+      &::after { color: white; }
+    }
+
+    .cypherplay {
+      > img { margin-left: -5px; }
+    }
+
+    .location {
+      display: flex;
+      align-items: center;
+      > .flag { margin-right: 10px; }
+    }
+  }
+
 
   @keyframes connect-pipe-dot {
     0% { transform: translateX(30px); animation-timing-function: cubic-bezier(0.5,0,1,0.5); }
