Add FontAwesome, fix cyphertext scrolling, opening animation

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -107,6 +107,8 @@
       <div class="bg">
         <div class="pipe"></div>
         <div class="dot"></div>
+        <div class="row1" [ngClass]="{'connected': cypherpunkEnabled}">x`8 0 # = v 7 mb" | y 9 # 8 M ) _ + kl $ #mn x -( )e f l]> ! 03 @jno x~`.xl ty )[sx k j x`8 0 # = v 7 mb" | y 9 # 8 M ) _ + kl $ #mn x -( )e f l]> ! 03 @jno x~`.xl ty )[sx k j</div>
+        <div class="row2" [ngClass]="{'connected': cypherpunkEnabled}">dsK 7 & [*h ^% u x 5 8 00 M< K! @ &6^d jkn 70 :93jx p0 bx, 890 Qw ;é " >?7 9 3@ () 5x3 > dsK 7 & [*h ^% u x 5 8 00 M< K! @ &6^d jkn 70 :93jx p0 bx, 890 Qw ;é " >?7 9 3@ () 5x3 ></div>
         <div class="frame"></div>
       </div>
 
@@ -126,241 +128,6 @@
         <span>{{serverName}}</span>
       </div>
     </div>
-
-    <!--
-    <div class="scrolling-binary">
-      <div class="right">
-        <span style="color: #31afb7">x</span>
-        <span style="color: #5d25b1">`</span>
-        <span style="color: #a5c509">8 </span>
-        <span style="color: #008000">0 </span>
-        <span style="color: #5d25b1"># </span>
-        <span style="color: #31afb7">= </span>
-        <span style="color: #ce1a1a">v </span>
-        <span style="color: #008000">7 </span>
-        <span style="color: #fff">m</span>
-        <span style="color: #5d25b1">b</span>
-        <span style="color: #a5c509">" </span>
-        <span style="color: #008000">| </span>
-        <span style="color: #fff">y </span>
-        <span style="color: #5d25b1">9 </span>
-        <span style="color: #a5c509"># </span>
-        <span style="color: #5d25b1">8 </span>
-        <span style="color: #ce1a1a">M </span>
-        <span style="color: #31afb7">] </span>
-        <span style="color: #a97619">_ </span>
-        <span style="color: #a5c509">+ </span>
-        <span style="color: #008000">k</span>
-        <span style="color: #a97619">l </span>
-        <span style="color: #ce1a1a">$ </span>
-        <span style="color: #5d25b1">#</span>
-        <span style="color: #a97619">m</span>
-        <span style="color: #fff">n </span>
-        <span style="color: #31afb7">x </span>
-        <span style="color: #008000">-</span>
-        <span style="color: #31afb7">( </span>
-        <span style="color: #a97619">]</span>
-        <span style="color: #a5c509">e </span>
-        <span style="color: #5d25b1">f </span>
-        <span style="color: #008000">l</span>
-        <span style="color: #fff">]</span>
-        <span style="color: #ce1a1a">> </span>
-        <span style="color: #31afb7">! </span>
-        <span style="color: #5d25b1">0</span>
-        <span style="color: #a97619">3 </span>
-        <span style="color: #008000">@</span>
-        <span style="color: #a5c509">j</span>
-        <span style="color: #ce1a1a">n</span>
-        <span style="color: #31afb7">o </span>
-        <span style="color: #008000">x</span>
-        <span style="color: #a97619">~</span>
-        <span style="color: #a5c509">`</span>
-        <span style="color: #fff">.</span>
-        <span style="color: #31afb7">x</span>
-        <span style="color: #5d25b1">l </span>
-        <span style="color: #ce1a1a">t</span>
-        <span style="color: #008000">y</span>
-        <span style="color: a97619">]</span>
-        <span style="color: 31afb7">[</span>
-        <span style="color: fff">s</span>
-        <span style="color: ce1a1a">x </span>
-        <span style="color: 008000">k </span>
-        <span style="color: 5d25b1">j </span>
-
-        <span style="color: #31afb7">x</span>
-        <span style="color: #5d25b1">`</span>
-        <span style="color: #a5c509">8 </span>
-        <span style="color: #008000">0 </span>
-        <span style="color: #5d25b1"># </span>
-        <span style="color: #31afb7">= </span>
-        <span style="color: #ce1a1a">v </span>
-        <span style="color: #008000">7 </span>
-        <span style="color: #fff">m</span>
-        <span style="color: #5d25b1">b</span>
-        <span style="color: #a5c509">" </span>
-        <span style="color: #008000">| </span>
-        <span style="color: #fff">y </span>
-        <span style="color: #5d25b1">9 </span>
-        <span style="color: #a5c509"># </span>
-        <span style="color: #5d25b1">8 </span>
-        <span style="color: #ce1a1a">M </span>
-        <span style="color: #31afb7">] </span>
-        <span style="color: #a97619">_ </span>
-        <span style="color: #a5c509">+ </span>
-        <span style="color: #008000">k</span>
-        <span style="color: #a97619">l </span>
-        <span style="color: #ce1a1a">$ </span>
-        <span style="color: #5d25b1">#</span>
-        <span style="color: #a97619">m</span>
-        <span style="color: #fff">n </span>
-        <span style="color: #31afb7">x </span>
-        <span style="color: #008000">-</span>
-        <span style="color: #31afb7">( </span>
-        <span style="color: #a97619">]</span>
-        <span style="color: #a5c509">e </span>
-        <span style="color: #5d25b1">f </span>
-        <span style="color: #008000">l</span>
-        <span style="color: #fff">]</span>
-        <span style="color: #ce1a1a">> </span>
-        <span style="color: #31afb7">! </span>
-        <span style="color: #5d25b1">0</span>
-        <span style="color: #a97619">3 </span>
-        <span style="color: #008000">@</span>
-        <span style="color: #a5c509">j</span>
-        <span style="color: #ce1a1a">n</span>
-        <span style="color: #31afb7">o </span>
-        <span style="color: #008000">x</span>
-        <span style="color: #a97619">~</span>
-        <span style="color: #a5c509">`</span>
-        <span style="color: #fff">.</span>
-        <span style="color: #31afb7">x</span>
-        <span style="color: #5d25b1">l </span>
-        <span style="color: #ce1a1a">t</span>
-        <span style="color: #008000">y</span>
-        <span style="color: a97619">]</span>
-        <span style="color: 31afb7">[</span>
-        <span style="color: fff">s</span>
-        <span style="color: ce1a1a">x </span>
-        <span style="color: 008000">k </span>
-        <span style="color: 5d25b1">j </span>
-      </div>
-      <div class="left">
-        <span style="color: #31afb7">d</span>
-        <span style="color: #5d25b1">s</span>
-        <span style="color: #a5c509">K </span>
-        <span style="color: #008000">7 </span>
-        <span style="color: #5d25b1">& </span>
-        <span style="color: #31afb7">[ </span>
-        <span style="color: #ce1a1a">*</span>
-        <span style="color: #008000">h </span>
-        <span style="color: #fff">^</span>
-        <span style="color: #5d25b1">% </span>
-        <span style="color: #a5c509">u </span>
-        <span style="color: #008000">x </span>
-        <span style="color: #fff">5 </span>
-        <span style="color: #5d25b1">8 </span>
-        <span style="color: #a5c509">0</span>
-        <span style="color: #5d25b1">0</span>
-        <span style="color: #ce1a1a">M</span>
-        <span style="color: #31afb7">< </span>
-        <span style="color: #a97619">K</span>
-        <span style="color: #a5c509">! </span>
-        <span style="color: #008000">@ </span>
-        <span style="color: #a97619">&</span>
-        <span style="color: #ce1a1a">6</span>
-        <span style="color: #5d25b1">^</span>
-        <span style="color: #a97619">d </span>
-        <span style="color: #fff">j</span>
-        <span style="color: #31afb7">k</span>
-        <span style="color: #008000">n </span>
-        <span style="color: #31afb7">7</span>
-        <span style="color: #a97619">0 </span>
-        <span style="color: #a5c509">:</span>
-        <span style="color: #5d25b1">9</span>
-        <span style="color: #008000">3</span>
-        <span style="color: #fff">j</span>
-        <span style="color: #ce1a1a">x </span>
-        <span style="color: #31afb7">p</span>
-        <span style="color: #5d25b1">0 </span>
-        <span style="color: #a97619">b</span>
-        <span style="color: #008000">x</span>
-        <span style="color: #a5c509">, </span>
-        <span style="color: #ce1a1a">8</span>
-        <span style="color: #31afb7">9</span>
-        <span style="color: #008000">0 </span>
-        <span style="color: #a97619">Q</span>
-        <span style="color: #a5c509">w </span>
-        <span style="color: #fff">;</span>
-        <span style="color: #31afb7">é </span>
-        <span style="color: #5d25b1">" </span>
-        <span style="color: #ce1a1a">></span>
-        <span style="color: #008000">?</span>
-        <span style="color: a97619">7 </span>
-        <span style="color: 31afb7">9 </span>
-        <span style="color: fff">3</span>
-        <span style="color: ce1a1a">@ </span>
-        <span style="color: 008000">[ </span>
-        <span style="color: 5d25b1">5 </span>
-
-        <span style="color: #31afb7">d</span>
-        <span style="color: #5d25b1">s</span>
-        <span style="color: #a5c509">K </span>
-        <span style="color: #008000">7 </span>
-        <span style="color: #5d25b1">& </span>
-        <span style="color: #31afb7">[ </span>
-        <span style="color: #ce1a1a">*</span>
-        <span style="color: #008000">h </span>
-        <span style="color: #fff">^</span>
-        <span style="color: #5d25b1">% </span>
-        <span style="color: #a5c509">u </span>
-        <span style="color: #008000">x </span>
-        <span style="color: #fff">5 </span>
-        <span style="color: #5d25b1">8 </span>
-        <span style="color: #a5c509">0</span>
-        <span style="color: #5d25b1">0</span>
-        <span style="color: #ce1a1a">M</span>
-        <span style="color: #31afb7">< </span>
-        <span style="color: #a97619">K</span>
-        <span style="color: #a5c509">! </span>
-        <span style="color: #008000">@ </span>
-        <span style="color: #a97619">&</span>
-        <span style="color: #ce1a1a">6</span>
-        <span style="color: #5d25b1">^</span>
-        <span style="color: #a97619">d </span>
-        <span style="color: #fff">j</span>
-        <span style="color: #31afb7">k</span>
-        <span style="color: #008000">n </span>
-        <span style="color: #31afb7">7</span>
-        <span style="color: #a97619">0 </span>
-        <span style="color: #a5c509">:</span>
-        <span style="color: #5d25b1">9</span>
-        <span style="color: #008000">3</span>
-        <span style="color: #fff">j</span>
-        <span style="color: #ce1a1a">x </span>
-        <span style="color: #31afb7">p</span>
-        <span style="color: #5d25b1">0 </span>
-        <span style="color: #a97619">b</span>
-        <span style="color: #008000">x</span>
-        <span style="color: #a5c509">, </span>
-        <span style="color: #ce1a1a">8</span>
-        <span style="color: #31afb7">9</span>
-        <span style="color: #008000">0 </span>
-        <span style="color: #a97619">Q</span>
-        <span style="color: #a5c509">w </span>
-        <span style="color: #fff">;</span>
-        <span style="color: #31afb7">é </span>
-        <span style="color: #5d25b1">" </span>
-        <span style="color: #ce1a1a">></span>
-        <span style="color: #008000">?</span>
-        <span style="color: a97619">7 </span>
-        <span style="color: 31afb7">9 </span>
-        <span style="color: fff">3</span>
-        <span style="color: ce1a1a">@ </span>
-        <span style="color: 008000">[ </span>
-        <span style="color: 5d25b1">5 </span>
-      </div>
-    </div>
-    -->
   </div>
 </div>
 
