--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,6 +2,8 @@
 @import '~bourbon-neat/app/assets/stylesheets/_neat';
 @import url('https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,800');
 @import 'variables';
+@import '~/../src/assets/fonts/font-awesome.min.css';
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
